WIP: VOL-895: Low colour contrast fixes

--- a/app/cdn/assets/_styles/core/config.scss
+++ b/app/cdn/assets/_styles/core/config.scss
@@ -30,8 +30,8 @@ $dark-text          : #454a4c;
 $warning-background : #FEF7F7;
 $summary-border     : #CDD7DC;
 $summary-background : #E6EFF5;
-$outline            : #FFBF47;
-$application-submit-background: #28A197;
+$outline            : #fd0 ;
+$application-submit-background: #00703c;
 
 /**
  * [3] - Layout
